# scalarizing

./: .gitmodules  README.md  breast-test-0-s1.csv  breast-train-0-s1.csv  pyproject.toml
.github/workflows/: ci.yaml
notebooks/: 0623-experiment-notebook.ipynb  3.0-experiments.ipynb  3.0-single-experiment.ipynb  Untitled.ipynb  base_results.ipynb  cluster.ipynb  creating-experiments.ipynb  experiment-management.ipynb  rankings.csv  remove-damaged.ipynb  results-analyze.ipynb  results.csv  running-experiments.ipynb  slurm-script.sh
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/1/: meta.yaml
notebooks/mlruns/1/00054075076c497facc30ee5f4088df4/: meta.yaml
notebooks/mlruns/1/000a6dc87bad404b978fde6468d6e318/: meta.yaml
notebooks/mlruns/1/000ab89476a0476dab8dbfecdc8bb233/: meta.yaml
notebooks/mlruns/1/001e5275c6ee4f14af0585ff6e44f513/: meta.yaml
notebooks/mlruns/1/00221ef917684eee8460f9516a244d80/: meta.yaml
notebooks/mlruns/1/002598a19ff34562b81e5af6f47142c1/: meta.yaml
notebooks/mlruns/1/002612a7536642a2b1803cd0683f4422/: meta.yaml
notebooks/mlruns/1/0031faef212c423a98968a9d37b01ac6/: meta.yaml
notebooks/mlruns/1/0035d971ceaa4096a2a9f5f6bc274900/: meta.yaml
notebooks/mlruns/1/003653b378464d1897722abf473fa428/: meta.yaml
notebooks/mlruns/1/0037ab3801074ade8eca1d5b70d427f2/: meta.yaml
notebooks/mlruns/1/003fc79c27eb47f4892c0c90b0b0d85a/: meta.yaml
notebooks/mlruns/1/004433b76fdb487caa911b38db2153b8/: meta.yaml
notebooks/mlruns/1/004dd4efdc654fe3aec0506e14bf7909/: meta.yaml
notebooks/mlruns/1/004df87e77884949955d804eac102edd/: meta.yaml
notebooks/mlruns/1/0054b368f4c14b0da4fb13f77231f504/: meta.yaml
notebooks/mlruns/1/005b65d58fc342a5a53fb880aa76e54b/: meta.yaml
notebooks/mlruns/1/005ec1f0e175418b80493d64b7678e74/: meta.yaml
notebooks/mlruns/1/00708198e87b43acaeb19725e2036db1/: meta.yaml
notebooks/mlruns/1/00858981e24f4e3e9a8f3f3c909a52d1/: meta.yaml
notebooks/mlruns/2/: meta.yaml
scalarizing/: scalarizing.py  scoring_functions.py  test_scalarizing.py  utils.py
(+97420 files in other folders)
